servers/new/yamls/spring-svc.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: APPNAME
  namespace: NAMESPACE
  labels:
    app: APPNAME
spec:
  replicas: REPLICAS
  minReadySeconds: MINREADYSECONDS
  revisionHistoryLimit: REVISIONHISTORYLIMIT
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: APPNAME
  template:
    metadata:
      labels:
        app: APPNAME
    spec:
      imagePullSecrets:
        - name: aliyun-secret
      containers:
      - name: APPNAME
        image: IMAGE_PATH
        imagePullPolicy: Always
        ports:
        - containerPort: PORT
        volumeMounts:
         - name: nfs-source
           mountPath: /mnt/wwwroot/source/
      volumes:
      - name: nfs-source
        nfs:
         server: NFS_SERVER
         path: "/mnt/wwwroot/source"
---
apiVersion: v1
kind: Service
metadata:
  name: APPNAME
spec:
  selector:
    app: APPNAME
  ports:
  - protocol: TCP
    port: 80
    targetPort: PORT
